Travis CI tweaks
* cache bundle
* build only master branch
* split into separate build scripts for cucumber and rspec

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: ruby
 rvm:
   - 2.0.0
-script: bundle exec cucumber && bundle exec rspec
+cache: bundler
+branches:
+  only:
+    - master
+script:
+  - bundle exec cucumber
+  - bundle exec rspec
