--- a/spec/rates/cok.yml
+++ b/spec/rates/cok.yml
@@ -1,20 +1,26 @@
+---
 USD:
- buy_cash: 103.4
- buy_draft: 101.8
- sell_cash: 105.65
-GBP:
- buy_cash: 165.8
- buy_draft: 162.0
- sell_cash: 172.3
+  :buy_cash: 106.45
+  :buy_draft: 104.2
+  :sell_cash: 108.85
+  :sell_draft: 109.4
 CAD:
- buy_cash: 95.75
- buy_draft: 93.5
- sell_cash: 98.45
+  :buy_cash: 93.15
+  :buy_draft: 91.9
+  :sell_cash: 97.0
+  :sell_draft: 98.35
+GBP:
+  :buy_cash: 175.1
+  :buy_draft: 162.0
+  :sell_cash: 180.1
+  :sell_draft: 181.4
 KYD:
   :buy_cash: 116.3
   :buy_draft: 100.0
-  :sell_cash: 120.4
+  :sell_cash: 123.4
+  :sell_draft: 122.25
 EUR:
-  :buy_cash: 139.5
+  :buy_cash: 143.0
   :buy_draft: 130.2
-  :sell_cash: 144.0
+  :sell_cash: 147.0
+  :sell_draft: 148.0
