Fix #4 Update Sell Cash column for JMMB

--- a/spec/rates/jmmb.yml
+++ b/spec/rates/jmmb.yml
@@ -1,25 +1,26 @@
+---
 USD:
-  buy_cash: 103.45
-  buy_draft: 104.45
-  sell_draft: 106.0
-  sell_cash:
+  :buy_cash: 103.45
+  :buy_draft: 104.45
+  :sell_cash: 106.0
+  :sell_draft: 106.0
 TTD:
-  buy_cash: 14.55
-  buy_draft: 15.01
-  sell_draft: 16.92
-  sell_cash:
+  :buy_cash: 14.55
+  :buy_draft: 15.01
+  :sell_cash: 16.92
+  :sell_draft: 16.92
 GBP:
-  buy_cash: 167.74
-  buy_draft: 168.74
-  sell_draft: 174.53
-  sell_cash:
+  :buy_cash: 167.74
+  :buy_draft: 168.74
+  :sell_cash: 174.53
+  :sell_draft: 174.53
 EUR:
-  buy_cash: 138.81
-  buy_draft: 140.31
-  sell_draft: 145.68
-  sell_cash:
+  :buy_cash: 138.81
+  :buy_draft: 140.31
+  :sell_cash: 145.68
+  :sell_draft: 145.68
 CAD:
-  buy_cash: 95.59
-  buy_draft: 96.59
-  sell_draft: 100.56
-  sell_cash:
+  :buy_cash: 95.59
+  :buy_draft: 96.59
+  :sell_cash: 100.56
+  :sell_draft: 100.56
