--- a/spec/rates/bns.yml
+++ b/spec/rates/bns.yml
@@ -1,51 +1,51 @@
 ---
 USD:
-  :buy_cash: 101.3
-  :buy_draft: 103.3
-  :sell_cash: 105.0
-  :sell_draft: 105.0
+  :buy_cash: 114.33
+  :buy_draft: 126.73
+  :sell_cash: 131.34
+  :sell_draft: 131.34
 GBP:
-  :buy_cash: 166.06
-  :buy_draft: 169.48
-  :sell_cash: 173.16
-  :sell_draft: 173.16
+  :buy_cash: 167.87
+  :buy_draft: 170.88
+  :sell_cash: 175.9
+  :sell_draft: 175.9
 CAD:
-  :buy_cash: 94.3
-  :buy_draft: 96.71
-  :sell_cash: 99.5
-  :sell_draft: 99.5
+  :buy_cash: 95.38
+  :buy_draft: 97.82
+  :sell_cash: 101.05
+  :sell_draft: 101.05
 EUR:
-  :buy_cash: 135.01
-  :buy_draft: 138.05
-  :sell_cash: 143.82
-  :sell_draft: 143.82
+  :buy_cash: 145.91
+  :buy_draft: 149.2
+  :sell_cash: 155.43
+  :sell_draft: 155.43
 BBD:
-  :buy_cash: 46.23
-  :buy_draft: 50.25
-  :sell_cash: 54.62
-  :sell_draft: 54.62
+  :buy_cash: 51.23
+  :buy_draft:
+  :sell_cash: 68.32
+  :sell_draft: 68.32
 KYD:
-  :buy_cash: 112.4
-  :buy_draft: 117.09
-  :sell_cash: 127.13
-  :sell_draft: 127.13
+  :buy_cash: 137.69
+  :buy_draft: 143.43
+  :sell_cash: 155.9
+  :sell_draft: 155.9
 XCD:
-  :buy_cash: 34.59
-  :buy_draft: 36.41
-  :sell_cash: 40.46
-  :sell_draft: 40.46
+  :buy_cash: 43.27
+  :buy_draft: 45.55
+  :sell_cash: 50.61
+  :sell_draft: 50.61
 JPY:
-  :buy_cash: 0.9341
-  :buy_draft: 0.9833
-  :sell_cash: 1.0573
-  :sell_draft: 1.0573
+  :buy_cash: 1.0655
+  :buy_draft: 1.1216
+  :sell_cash: 1.206
+  :sell_draft: 1.206
 CHF:
-  :buy_cash: 106.8
-  :buy_draft: 110.67
-  :sell_cash: 119.64
-  :sell_draft: 119.64
+  :buy_cash: 121.25
+  :buy_draft: 125.64
+  :sell_cash: 135.83
+  :sell_draft: 135.83
 TTD:
-  :buy_cash: 15.26
-  :buy_draft: 16.06
-  :sell_cash: 17.65
-  :sell_draft: 17.65
+  :buy_cash:
+  :buy_draft: 18.58
+  :sell_cash: 22.08
+  :sell_draft: 22.08
