--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ branches:
   only:
     - master
 script:
-  - bundle exec cucumber -f Fivemat
+  - bundle exec cucumber
   - bundle exec rspec -f Fivemat
